export type Location = {
  id: number;
  name: string;
  federalState: string;
};
