@startuml

entity Document {
  * id: number <<generated>>
  * profile_id: number <<Profile>> <<FK>>
  --
  * name: text
  * type: text <<DocumentType>>
  * category: text <<Category>>
}

entity Service {
  * id: number <<generated>>
  --
  * name: string
  * category: text <<Category>>
  * location: number <<Location>> <<FK>>
}

entity ServiceDocument {
  * id: number <<generated>>
  --
  * service_id: number <<Service>> <<FK>>
  * document_id: number <<Document>> <<FK>>
}

entity Profile {
  * id: number <<generated>>
  --
  ...
}

entity ProfileService {
  * id: number <<generated>>
  * profile_id: number <<Profile>> <<FK>>
  * service_id: number <<Service>> <<FK>>
  --
  status: text <<ProfileServiceStatus>>
}

entity Location {
  * id: number <<generated>>
  --
  ...
}

enum DocumentType {
  IDENTITY_CARD
  REGISTRATION_FORM
  OTHER
}

entity Category {
  * id: number <<generated>>
  ---
  * domain: text <<Domain>>
}

enum Domain {
  FAMILY
  HOBBY
  HEALTHCARE
  EDUCATION
  WORK
  LAW
}

enum ProfileServiceStatus {
  ADDED
  STARTED
  PENDING
  FINISHED
  ARCHIVED
  CANCELED
}

Location -- Profile
Location -- Service
Profile -- Document
Profile "0"--"n" ProfileService
Service "0"--"n" ProfileService
Service -- Category
ProfileService "0"--"n" ServiceDocument
ProfileService -- ProfileServiceStatus
ServiceDocument -- Document
Category -- Domain
Document -- DocumentType
Document -- Category

@enduml
